--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   </head>
-  <body data-home-page="https://napuor.nicepage.io/Home.html?version=888b9626-2620-488f-9653-71a666d23453" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-sticky u-sticky-7b7d u-header" id="sec-f836"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="https://napuor.nicepage.io/Home.html?version=fe5dbbac-5a75-4926-86a4-a3bcfb3b1172" data-home-page-title="Home" class="u-body u-xl-mode"><header class="u-clearfix u-header u-sticky u-sticky-7b7d u-header" id="sec-f836"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem;">
             <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
@@ -71,7 +71,7 @@
           <br><span class="u-icon u-icon-2"><svg class="u-svg-content" viewBox="0 0 24 16" x="0px" y="0px" style="width: 1em; height: 1em;"><path fill="currentColor" d="M23.8,1.1l-7.3,6.8l7.3,6.8c0.1-0.2,0.2-0.6,0.2-0.9V2C24,1.7,23.9,1.4,23.8,1.1z M21.8,0H2.2
 	c-0.4,0-0.7,0.1-1,0.2L10.6,9c0.8,0.8,2.2,0.8,3,0l9.2-8.7C22.6,0.1,22.2,0,21.8,0z M0.2,1.1C0.1,1.4,0,1.7,0,2V14
 	c0,0.3,0.1,0.6,0.2,0.9l7.3-6.8L0.2,1.1z M15.5,9l-1.1,1c-1.3,1.2-3.6,1.2-4.9,0l-1-1l-7.3,6.8c0.2,0.1,0.6,0.2,1,0.2H22
-	c0.4,0,0.6-0.1,1-0.2L15.5,9z"></path></svg><img></span>napuor@gmail.com
+	c0.4,0,0.6-0.1,1-0.2L15.5,9z"></path></svg><img></span>&nbsp; napuor@gmail.com
         </a><span class="u-file-icon u-icon u-icon-3" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-4" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en&amp;platform=iphone"><img src="images/5977575.png" alt=""></span>
       </div></header> 
     <section class="u-clearfix u-grey-5 u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-section-1" id="carousel_86f6">
