--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​Interested in Losing Weight?, ​Best Weight Loss Programs for 2022, ​Weight loss nutrition plan, ​Weight Loss Challenge, ​How to Lose Weight Fast in 3 Simple Steps, Contact us, Follow us">
     <meta name="description" content="NaPuOr stands for nature pure organic. It produces and packages certified organic grocery and non perishable produce.">
-    <title>Home</title>
+    <title>NaPuOr</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -43,7 +43,7 @@
 	c0,0.3,0.1,0.6,0.2,0.9l7.3-6.8L0.2,1.1z M15.5,9l-1.1,1c-1.3,1.2-3.6,1.2-4.9,0l-1-1l-7.3,6.8c0.2,0.1,0.6,0.2,1,0.2H22
 	c0.4,0,0.6-0.1,1-0.2L15.5,9z"></path></svg><img></span>&nbsp; napuor@gmail.com
         </a>
-        <a href="napuor.com" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313" title="napuor">
+        <a href="https://napuor.github.io/" class="u-image u-logo u-image-1" data-image-width="423" data-image-height="313" title="napuor">
           <img src="images/napuorlogo.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-text u-text-default u-text-1"> + 91 7899467369</p><span class="u-file-icon u-icon u-icon-2" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN"><img src="images/6124997.png" alt=""></span><span class="u-file-icon u-icon u-icon-3" data-href="https://apps.apple.com/in/app/napuor/id1622264576?l=en&amp;platform=iphone"><img src="images/5977575.png" alt=""></span>
@@ -61,7 +61,7 @@
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            <div class="u-align-center u-gradient u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
