--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
     <section class="u-clearfix u-grey-5 u-valign-middle-md u-section-3" id="carousel_f0b4">
       <div class="u-bottom-left-radius-20 u-expanded-height u-palette-1-base u-shape u-shape-round u-shape-1"></div>
       <div class="u-palette-2-base u-radius-25 u-shape u-shape-round u-shape-2"></div>
-      <img class="u-align-left u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="960" data-image-height="960" data-href="https://napuor.github.io/" data-src="images/desi-cow-ghee.jpg">
+      <img class="u-align-left u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="960" data-image-height="960" data-href="https://napuor.github.io/" data-src="images/coffee.png">
       <div class="u-align-left u-container-style u-group u-radius-50 u-shape-round u-similar-fill u-white u-group-1">
         <div class="u-container-layout u-padding-12 u-valign-middle u-container-layout-1">
-          <h3 class="u-text u-text-default u-text-1">Desi Cow Ghee</h3>
-          <p class="u-text u-text-2">Organic ghee is made using organic butter obtained from grass-fed desi cow's milk. Organic cow ghee is made from the milk of the indigenous breed of cows and not the hybrid ones. The cows are not fed with any artificial supplements in their diet. The whole curd to ghee obtained is in the ratio of nearly 30:1.</p>
+          <h3 class="u-text u-text-default u-text-1">Napuor Coffee</h3>
+          <p class="u-text u-text-2">Organic coffee is coffee produced without the aid of artificial chemical substances, such as certain additives or some pesticides and herbicides.</p>
           <a href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN" class="u-active-palette-1-base u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-base u-palette-2-base u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-btn-1">read more</a>
         </div>
       </div>
