--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
         </div>
       </div>
-      <img class="u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="800" data-image-height="600" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN" data-src="images/g115ce9137bf32ac6067e7270cacbc5ced10d6faba885a6357a0a296dc52d414ec3a38e868cc83e3408c6244395d417e6cac36826823bdabf99e64fe4fdd3b287_1280.jpg">
+      <img class="u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="1280" data-image-height="853" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN" data-src="images/hands-holding-soil.jpeg">
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1">
