--- a/index.html
+++ b/index.html
@@ -74,17 +74,8 @@
         </nav>
       </div></header> 
     <section class="u-clearfix u-grey-5 u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-section-1" id="carousel_86f6">
-      <div class="u-bottom-right-radius-25 u-container-style u-gradient u-group u-shape-round u-group-1">
-        <div class="u-container-layout u-container-layout-1">
-          <div class="u-align-left u-container-style u-group u-palette-1-dark-2 u-radius-25 u-shape-round u-group-2">
-            <div class="u-container-layout u-container-layout-2">
-              <h5 class="u-text u-text-default u-text-1"> NaPUOR</h5>
-              <h1 class="u-text u-text-2"> Natural and Organic</h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <img class="u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="1280" data-image-height="853" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN" data-src="images/hands-holding-soil.jpeg">
+     
+      <img class="u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="1280" data-image-height="853" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN" data-src="images/organicfarm.jpeg">
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1">
