--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
       </div>
-      <img class="u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="1280" data-image-height="853" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN" data-src="images/coffee-plantation.jpeg">
+      <img class="u-image u-image-round u-radius-25 lazyload u-image-1" data-image-width="1280" data-image-height="853" data-href="https://play.google.com/store/apps/details?id=com.senseeot.napuor&amp;gl=IN" data-src="images/napuorbanner1.jpeg">
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-align-left u-container-style u-list-item u-radius-25 u-repeater-item u-shape-round u-white u-list-item-1">
