--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
       <div class="u-expanded-width u-grey-5 u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-align-center u-container-style u-group u-palette-2-base u-radius-20 u-shape-round u-group-1">
         <div class="u-container-layout u-container-layout-1">
-          <h2 class="u-text u-text-1">Instant Coffee</h2>
-          <p class="u-text u-text-2"> Organic Instant Coffee tastes great and is&nbsp;<b>much healthier than regular instant coffee</b>&nbsp;because Organic Instant Coffee doesn't contain any harmful chemicals, preservatives, or artificial ingredients.
+          <h2 class="u-text u-text-1">Dark Chocolate</h2>
+          <p class="u-text u-text-2"> Napuor Organic chocolate is made from single origin cacao solids &nbsp;<b>that is grown on the belt of Nilgiris </b>&nbspwithout synthetic chemicals, on farms that use natural, organic and biodynamic tools to cultivate these crops.Cocoa percentage is 60%.
           </p>
-          <div class="u-image u-image-circle lazyload u-image-1" alt="" data-image-width="375" data-image-height="336" data-href="https://napuor.github.io/" data-bg="url(&quot;images/coffee.png&quot;)"></div>
+          <div class="u-image u-image-circle lazyload u-image-1" alt="" data-image-width="375" data-image-height="336" data-href="https://napuor.github.io/" data-bg="url(&quot;images/chcocolate.png&quot;)"></div>
         </div>
       </div>
     </section>
