--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           <h2 class="u-text u-text-1">Dark Chocolate</h2>
           <p class="u-text u-text-2"> Napuor Organic chocolate is made from single origin cacao solids &nbsp;<b>that is grown on the belt of Nilgiris </b>&nbspwithout synthetic chemicals, on farms that use natural, organic and biodynamic tools to cultivate these crops.Cocoa percentage is 60%.
           </p>
-          <div class="u-image u-image-circle lazyload u-image-1" alt="" data-image-width="375" data-image-height="336" data-href="https://napuor.github.io/" data-bg="url(&quot;images/chcocolate.png&quot;)"></div>
+          <div class="u-image u-image-circle lazyload u-image-1" alt="" data-image-width="375" data-image-height="336" data-href="https://napuor.github.io/" data-bg="url(&quot;images/chocolate.png&quot;)"></div>
         </div>
       </div>
     </section>
